--- a/Pendue/css/pendue.css
+++ b/Pendue/css/pendue.css
@@ -1,4 +1,4 @@
-button.rond{
+.rond{
     border-radius:10% 35% 50% 20%;
     width: 70px;
     height: 70px;
@@ -8,6 +8,15 @@ button.rond{
 h1{
     text-align: center;
 }
-.d-none{
-    display:none;
+.transparance{
+    background-color: rgba(230, 221, 209, 0.329);
+    font-size: 25px;
+    border-radius:10% 35% 50% 20%;
+    width: 70px;
+    height: 70px;
+}
+.lettre{
+    margin:10px;
+    font-size: 100px;
+    color:cornflowerblue;
 }
